Fix home header on mobile

--- a/refactor/src/components/Header/Header.css
+++ b/refactor/src/components/Header/Header.css
@@ -25,4 +25,7 @@ nav > * {
     align-items: center;
     padding: 10px 30px;
   }
+  nav {
+    margin-top: 10px;
+  }
 }
