--- a/refactor/src/screens/Home/Home.css
+++ b/refactor/src/screens/Home/Home.css
@@ -25,7 +25,7 @@
 }
 .home-text h1 {
   font-size: 5rem;
-  margin-bottom: -20px;
+  margin-bottom: -1.25rem;
 }
 
 .home-text h4 {
